--- a/html/id.html
+++ b/html/id.html
@@ -1,7 +1,7 @@
 <ul>
 기본정보입력
 </ul>
-<form>
+<form action="" method='get'>
  <input type='text' placeholder='필수입력'><br>
  <input type='password' placeholder='필수입력'>
 </form>
