--- a/html/like.html
+++ b/html/like.html
@@ -4,3 +4,5 @@
 <input type='radio' name='hobby' value='게임'>게임
 <input type='radio' name='hobby' value='독서'>독서
 </form>
+<br>
+<button type='submit'>제출</button>
