--- a/html/formtest.html
+++ b/html/formtest.html
@@ -1,7 +1,19 @@
-<form>
+<head>
+<title>
+SEX
+</title>
+</head>
+
+<br>
+
+<form action="" method='get'>
 <input type='checkbox'>남
 <br>
 <input type='checkbox'>여
+<br>
+<input type='checkbox'>잘 모른다
+<br>
 </form>
 
-
+<br>
+<button type='submit'>제출</button>
