--- a/html/like.html
+++ b/html/like.html
@@ -1,5 +1,11 @@
+<head>
+<title>
+Hobby
+</title>
+</head>
+
 내 취미?
-<form>
+<form action="" method='get'>
 <input type='radio' name='hobby' value='춤'>춤
 <input type='radio' name='hobby' value='게임'>게임
 <input type='radio' name='hobby' value='독서'>독서
