--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <a href="html/formtest.html">성별선택</a>
 <br>
 <a href="html/id.html">계정만들기</a>
-
+<br>
+<a href="JavaToDB.html">java에서 DB 자료 가져오는 방법 메뉴얼</a>
 
